ecmascript/parser/tests/test262-error-references/fail/1f7f17241661662d.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/1f7f17241661662d.js:1:3
  |
1 | []=>0
  |   ^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/1f7f17241661662d.js:1:1
  |
1 | []=>0
  | ^^

